4) igmpproxy: fix init mrDesc.<br>
5) igmpproxy: fix client record find in rt switch table.<br>
6) kernel: arch/ralink: fix mem autodetect if highmem support disabled(limit to 256Mb).<br>
7) kernel: introduce and use generic init task.<br>
8) kernel: mips: backport some upstream fixes.<br>
9) kernel: irq: disallow commit to random entropy pool from every irq(decrease latency).<br>
10) kernel: enable BQL/DQL by default for 8Mb flash with DDR RAM devices(decrease latency).<br>
11) kernel: fastpath: cleanup and small optimize.<br>
12) kernel: inetdevice: fixed signed integer overflow.<br>
13) kernel: net/raeth: small cleanup.<br>
14) kernel: net: avoid to hang up on sending due to sysctl configuration overflow.<br>
15) kernel: net: ipmr: limit MRT_TABLE identifiers.<br>
16) kernel: net: net_sched: backport codel/fq_codel from 3.17 kernel tree.<br>
17) kernel: net: performance fix for process_backlog.<br>
18) kernel: net: reduce net_rx_action() latency to 2 HZ.<br>
19) kernel: netfilter: cttimeout: fix buffer overflow.<br>
20) kernel: pkt_sched: avoid requeues if possible.<br>
21) kernel: net_sched: more precise pkt_len computation.<br>
22) kernel: net_sched: better precise estimation on packet length for untrusted packets.<br>
23) kernel: tcp: allow for bigger reordering level.<br>
24) kernel: tcp: fix possible NULL dereference in tcp_vX_send_reset().<br>
25) kernel: tcp: tcp_make_synack() consumes dst parameter.<br>
26) kernel: tcp: remove unused tw_cookie_values from tcp_timewait_sock.<br>
27) kernel: tcp: remove TCPCT.<br>
28) kernel: ipv6: fix 'inet6_rtm_getroute' to release 'rt->dst' in case of 'alloc_skb' failure.<br>
<br>
<br>
<b>TODO:</b><br>
1) port support l2tp/pptp hardware NAT offload (really needed??? in sdk very ugly code).<br>
2) add support dualstack ipv6/4 with dhcp v6/ra/6rd uplink support (need more info from ISP).<br>
3) full russian ui (need help community or employ the web developer).<br>
<br>
<br>
<br>